--- a/DC_Docs/styles/style.css
+++ b/DC_Docs/styles/style.css
@@ -97,17 +97,27 @@ ul {
 }
 
 blockquote {
+    line-height:30px;
+    position: relative;
     word-spacing: .05cm;
     margin: 40px 0;
     color: rgb(136, 135, 135);
     font-size: 14px;
-    padding: 0px 10px;
-    border-left: 5px solid rgb(206, 199, 199);
+    padding: 20px 60px 20px 30px;
+    border-left: 10px solid rgb(206, 199, 199);
     background-color: rgb(241, 238, 238);
 }
 
-sup {
-    font-size:40px
+.quote::before,
+.quote::after{
+    content: '\201c';
+    font-size:60px;
+}
+
+.quote::after {
+    position: absolute;
+    bottom:40px;
+    right:60px;
 }
 .content {
     line-height: 1.2;
