--- a/DC_Docs/styles/style.css
+++ b/DC_Docs/styles/style.css
@@ -1,6 +1,8 @@
 body {
     font-family:Catamaran,sans-serif;
     line-height: 1.2;
+    margin:0;
+    display:flex;
 }
 
 .logo {
@@ -40,7 +42,7 @@ h1 {
     color:#fff;
     width: 25%;
     max-width:180px; 
-    min-width: 150px;
+    min-width: 180px;
     height:auto;
     background-color:rgb(82, 81, 81);
 }
@@ -57,10 +59,12 @@ input {
 }
 
 .copyright {
+    position: fixed;
     font-size: 10px;
     color: rgb(163, 162, 162);
     text-align: center;
-    margin-top:350px;
+    bottom:0px;
+    left: 40px;
 }
 
 .right {
