--- a/DC_Docs/styles/style.css
+++ b/DC_Docs/styles/style.css
@@ -31,6 +31,8 @@ h1 {
     padding-bottom: 50px;
     font-size:34px;
     padding-top:5px;
+    font-weight: 300;
+    color: #1a1a1a;
 }
 .column {
     float: left;
