--- a/DC_Docs/styles/style.css
+++ b/DC_Docs/styles/style.css
@@ -57,6 +57,7 @@ input {
     margin: 15px 5px;
     padding: 3px 5px;
     font-size: 12px;
+    color:#fff;
     background-color: rgb(82, 81, 81);
 }
 
